# dxr-sample

./: .clang-format  CMakeLists.txt  README.md
docs/: Plan.md
dx12_sample/: CMakeLists.txt  Common.h  DX12Sample.cpp  DX12Sample.h  DXSample.cpp  DXSample.h  DeviceResources.h  GameInput.cpp  GameInput.h  Sample.hlsl  SceneManager.cpp  SceneManager.h  main.cpp  stdafx.h
dx12_sample/worldgen/: Noise.cpp  Noise.h  TerrainManager.cpp  TerrainManager.h  WorldGen.cpp  WorldGen.h
shaders/: CMakeLists.txt  Common.h  Dummy.cpp  Sample.hlsl  Shadows.hlsl
shaders/Scattering/: Common.hlsl  CopyInscatterCompute.hlsl  CopyIrradianceCompute.hlsl  IrradianceCompute.hlsl  SingleInscatterCompute.hlsl  SingleIrradianceCompute.hlsl  SphereInscatterCompute.hlsl  SphereIrradianceCompute.hlsl  SphereNInscatterCompute.hlsl  TransmittanceCompute.hlsl
utils/: AbstractCamera.h  CMakeLists.txt  CommandList.cpp  CommandList.h  DXSampleHelper.h  DescriptorHeap.cpp  DescriptorHeap.h  FeaturesCollector.h  Filesystem.h  GeometryTree.cpp  GeometryTree.h  GraphicsPipelineState.h  ICamera.h  Math.h  MeshManager.cpp  MeshManager.h  MeshObject.cpp  MeshObject.h  Misc.h  RenderTargetManager.cpp  RenderTargetManager.h  SceneObject.cpp  SceneObject.h  ShaderTable.cpp  ShaderTable.h  SphericalCamera.cpp  SphericalCamera.h  Types.h  WASDCamera.cpp  WASDCamera.h  stdafx.h
